Package_Tools/include-C/efl/fertig/evas-1/canvas/inarbeit/fertig/evas_text_eo_legacy.pp

{*
 * @brief Vertical advance property
 *
 * @param[in] obj The object.
 *
 * @return Evas coordinate
 *
 * @ingroup Evas_Object_Text_Group
  }
(* Const before type ignored *)
function evas_object_text_vert_advance_get(obj:PEvas_Text):longint;cdecl;external;
{*
 * @brief descent property
 *
 * @param[in] obj The object.
 *
 * @return Evas coordinate
 *
 * @ingroup Evas_Object_Text_Group
  }
(* Const before type ignored *)
function evas_object_text_descent_get(obj:PEvas_Text):longint;cdecl;external;
{*
 * @brief Returns the logical position of the last char in the text up to the
 * pos given.
 *
 * This is NOT the position of the last char because of the possibility of RTL
 * in the text.
 *
 * @param[in] obj The object.
 * @param[in] x X coordinate
 * @param[in] y Y coordinate
 *
 * @return Logical position of the last char
 *
 * @ingroup Evas_Object_Text_Group
  }
(* Const before type ignored *)
function evas_object_text_last_up_to_pos(obj:PEvas_Text; x:longint; y:longint):longint;cdecl;external;
{*
 * @brief Get character coordinates
 *
 * @param[in] obj The object.
 * @param[in] x X coordinate
 * @param[in] y Y coordinate
 * @param[out] cx X coordinate
 * @param[out] cy Y coordinate
 * @param[out] cw Width
 * @param[out] ch Height
 *
 * @return Logical position of char
 *
 * @ingroup Evas_Object_Text_Group
  }
(* Const before type ignored *)
function evas_object_text_char_coords_get(obj:PEvas_Text; x:longint; y:longint; cx:Plongint; cy:Plongint; 
           cw:Plongint; ch:Plongint):longint;cdecl;external;
{*
 * @brief Retrieve position and dimension information of a character within a
 * text @ref Efl_Canvas_Object
 *
 * This function is used to obtain the X, Y, width and height of the character
 * located at @c pos within the @ref Efl_Canvas_Object @c obj. @c obj must be a
 * text object Any of the @c Evas_Coord parameters ($cx, @c cy, @c cw, @c ch)
 * may be @c NULL in which case no value will be assigned to that parameter.
 *
 * @param[in] obj The object.
 * @param[in] pos The character position to request co-ordinates for.
 * @param[out] cx A pointer to an int to store the X value in (can be NULL).
 * @param[out] cy A pointer to an int to store the Y value in (can be NULL).
 * @param[out] cw A pointer to an int to store the Width value in (can be
 * NULL).
 * @param[out] ch A pointer to an int to store the Height value in (can be
 * NULL).
 *
 * @return @c false on success, @c true otherwise
 *
 * @ingroup Evas_Object_Text_Group
  }
(* Const before type ignored *)
function evas_object_text_char_pos_get(obj:PEvas_Text; pos:longint; cx:Plongint; cy:Plongint; cw:Plongint; 
           ch:Plongint):TEina_Bool;cdecl;external;
{$endif}

implementation


end.
